--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-
-streamlit==1.25.0
-google-generativeai==0.3.0
+streamlit==1.31.0
+google-generativeai==0.3.2
 PyPDF2==3.0.1
-matplotlib==3.8.1
+protobuf==4.25.1
+google-api-core==2.15.0
+google-auth==2.27.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.14.0
+googleapis-common-protos==1.62.0
